--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-.head {
+* {
+    font-family: Arial, sans-serif;
+}
+    .head {
     font-size: 20px;
     padding: 60px;
     background-color: lightskyblue;
@@ -25,9 +28,10 @@ body nav>ul {
     display: inline-block;
 }
 #Home {
-    background-color: red;
-    padding: 10px;
-    overflow: auto;;
+    background-color: white;
+    color: black;
+    border: 2px solid lightgrey;
+    border-radius: 4px;
 }
 .img1 {
     float: left;;
@@ -36,4 +40,9 @@ body nav>ul {
 .SubHead1 {
     position: relative;
     bottom: 10px;
+}
+.Article {
+    padding: 20px;
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
 }
