--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,60 @@
+*{
+ font-family: Montserrat, sans-serif;
+}
+.head {
+    font-size: 20px;
+    padding: 60px;
+    background-color: hwb(204 92% 0%);
+    text-align: center;
+    /* color: white; */
+}
+.navbar {
+    background-color: lightgrey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    list-style-type: none;
+}
+.navbar a {
+    text-decoration: none;
+    color: black;
+    padding: 14px 20px;
+    display: inline-block;
+}
+#Home {
+    background-color: hsl(0, 100%, 94%);
+    padding: 10px;
+    overflow: auto;
+}
+.SubHead1 {
+    position: relative;
+    bottom: 10px;
+}
+#AboutMe{
+    background-color: hsl(240, 100%, 97%);
+    border: 3px solid hsl(240, 100%, 73%);
+    box-shadow: 5px 5px 5px hsla(240, 100%, 30%, 0.075);
+    position: relative;
+    padding: 10px;
+    overflow: auto;
+    /* display: inline-block; */
+}
+.info{
+    float: left;
+    width: 50%;
+    line-height: 1.6;
+    box-sizing: border-box;
+}
+
+.Skill{
+    border: 3px;
+}
+.data {
+    
+}
+
+
 .Card{
   border: 1px solid hsl(0, 0%, 73%);
   border-radius: 5px;
