--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,8 @@
     border: 3px solid hsl(240, 100%, 73%);
     box-shadow: 5px 5px 5px hsla(240, 100%, 30%, 0.075);
     position: relative;
-    padding: 10px;
+    padding: 25px;
+    margin: 0px;
     overflow: auto;
     /* display: inline-block; */
 }
@@ -46,15 +47,30 @@
     line-height: 1.6;
     box-sizing: border-box;
 }
-
-.Skill{
-    border: 3px;
+.info2 {
+    float: left;
+    width: 50%;
+    line-height: 1.6;
+    box-sizing: border-box;
 }
-.data {
-    
+.CV{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 1px;
+    border: 1px solid rgba(0, 128, 0, 0);
 }
-
-
+.Skill {
+    padding: 5%;
+    border: 5px  hsl(0, 0%, 49%);
+}
+#ProgressBar{
+    float: left;
+    width: 50%;
+    line-height: 1.6;
+    box-sizing: border-box;
+    align-content: center;
+}
 .Card{
   border: 1px solid hsl(0, 0%, 73%);
   border-radius: 5px;
