--- a/src/index.css
+++ b/src/index.css
@@ -24,16 +24,19 @@
 }
 #Home {
     background-color: hsl(0, 100%, 94%);
-    padding: 10px;
+    padding: 25px;
     overflow: auto;
 }
 .SubHead1 {
     position: relative;
     bottom: 10px;
 }
+.pers-img{
+    border-radius: 10px;
+    max-width: 20%;
+}
 #AboutMe{
     background-color: hsl(240, 100%, 97%);
-    border: 3px solid hsl(240, 100%, 73%);
     box-shadow: 5px 5px 5px hsla(240, 100%, 30%, 0.075);
     position: relative;
     padding: 25px;
@@ -60,16 +63,26 @@
     height: 1px;
     border: 1px solid rgba(0, 128, 0, 0);
 }
-.Skill {
-    padding: 5%;
-    border: 5px  hsl(0, 0%, 49%);
+#Edu-Back{
+    background-color: hsl(240, 100%, 97%);
+    box-shadow: 5px 5px 5px hsla(240, 100%, 30%, 0.075);
+    position: relative;
+    padding: 25px;
+    margin: 0px;
+    overflow: auto;
 }
-#ProgressBar{
+#MySkill{
+    padding: 25px;
+}
+#Skill {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+.ProgressBar{
     float: left;
     width: 50%;
-    line-height: 1.6;
-    box-sizing: border-box;
-    align-content: center;
+    line-height: 1.5;  
 }
 .Card{
   border: 1px solid hsl(0, 0%, 73%);
