--- a/src/index.css
+++ b/src/index.css
@@ -1,95 +1,6 @@
-*{
- font-family: Montserrat, sans-serif;
-}
-.head {
-    font-size: 20px;
-    padding: 60px;
-    background-color: hwb(0 81% 0%);
-    text-align: center;
-    /* color: white; */
-}
-.navbar {
-    background-color: lightgrey;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50px;
-    list-style-type: none;
-}
-.navbar a {
-    text-decoration: none;
-    color: black;
-    padding: 14px 20px;
-    display: inline-block;
-}
-#Home {
-    background-color: hsl(0, 100%, 94%);
-    padding: 25px;
-    overflow: auto;
-}
-.SubHead1 {
-    position: relative;
-    bottom: 10px;
-}
-.pers-img{
-    border-radius: 10px;
-    max-width: 20%;
-}
-#AboutMe{
-    background-color: hsl(240, 100%, 97%);
-    box-shadow: 5px 5px 5px hsla(240, 100%, 30%, 0.075);
-    position: relative;
-    padding: 25px;
-    margin: 0px;
-    overflow: auto;
-    /* display: inline-block; */
-}
-.info{
-    float: left;
-    width: 50%;
-    line-height: 1.6;
-    box-sizing: border-box;
-}
-.info2 {
-    float: left;
-    width: 50%;
-    line-height: 1.6;
-    box-sizing: border-box;
-}
-#Edu-Back{
-    background-color: hsl(240, 100%, 97%);
-    box-shadow: 5px 5px 5px hsla(240, 100%, 30%, 0.075);
-    position: relative;
-    padding: 25px;
-    margin: 0px;
-    overflow: auto;
-}
-#MySkill{
-    padding: 25px;
-}
-#Skill {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-}
-.ProgressBar{
-    float: left;
-    width: 50%;
-    line-height: 1.5;  
-}
-.Card{
-  border: 1px solid hsl(0, 0%, 73%);
-  border-radius: 5px;
-  box-shadow: 5px 5px 5px hsla(0, 0%, 30%, 0.075);
-  padding: 20px;
-  margin: 10px;
-  text-align: center;
-  max-width: auto;
-  display: inline-block;
-}
-.Card .img-data{
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  object-fit: cover;
-}
+@import "tailwindcss";
+
+@layer base {
+    body {font-family: "Montserrat", sans-serif;
+    }
+    }
